[tool.poetry]
name = "django-utils"
version = "2023.1.0"
description = "A collection of utils used in our Django based web applications."
authors = ["4teamwork AG"]
readme = "README.md"
packages = [{include = "django_utils"}]

[tool.poetry.dependencies]
python = ">=3.8, <4"
django-configurations = "^2.4.1"
django-extensions = "^3.2.1"
sentry-sdk = "^1.21.0"
djangorestframework = "^3.14.0"
django = "^3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
